RESOLVED FIXED236455
Fix linker errors when CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER is enabled
https://bugs.webkit.org/show_bug.cgi?id=236455
Summary Fix linker errors when CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER is enabled
Ada Chan
Reported 2022-02-10 11:00:24 PST
Fix linker errors when CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER is enabled
Attachments
Patch (3.24 KB, patch)
2022-02-10 11:02 PST, Ada Chan
no flags
Ada Chan
Comment 1 2022-02-10 11:02:41 PST
EWS
Comment 2 2022-02-10 14:22:40 PST
Committed r289577 (247094@main): <https://commits.webkit.org/247094@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451572 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-10 14:23:22 PST
Note You need to log in before you can comment on or make changes to this bug.