Fix linker errors when CG_DISPLAY_LIST_BACKED_IMAGE_BUFFER is enabled https://bugs.webkit.org/show_bug.cgi?id=236455

Patch by Ada Chan <ada.chan@apple.com> on 2022-02-10
Reviewed by Tim Horton.

WebCore::GraphicsContext::createImageBuffer() and WebCore::GraphicsContext::createCompatibleImageBuffer()
are used in WebKit::GraphicsContextCGDisplayList and need to be exported

* platform/graphics/GraphicsContext.h:


Canonical link: https://commits.webkit.org/247094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289577 268f45cc-cd09-0410-ab3c-d52691b4dbfc